comingSoon mobile layout fixed

--- a/public/css/comingSoon.css
+++ b/public/css/comingSoon.css
@@ -81,7 +81,8 @@ button{
 }
 @media (max-width: 640px) {
     .mail-cont {
-        width: 360px;
+        max-width: 450px;
+        width: 80vw;
     }
     input{
         border-radius: 0.6rem 0px 0px 0.6rem !important;
@@ -122,6 +123,9 @@ button{
 }
 
 @media (max-width: 411px) {
+    .flip-clock-wrapper{
+        height: 50px;
+    }
     .flip-clock-wrapper ul {
         position: relative;
         float: left;
@@ -158,7 +162,12 @@ button{
         width: 300px;
     }
 
+    
     .flip-clock-divider {
         width: 5px;
+    }
+    .social img{
+        width: 40px;
+        height: 40px;
     }
 }
